Made changes to fix alignment issue of Add Product / Order Product button

--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -100,8 +100,10 @@
 .MainContent
 {
   height: 100%;
-  white-space:nowrap;
-  width: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
 } 
 
 .TopbarMiddle input{
